feat/header and footer

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Practica JavaScript</title>
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="header__container container">
             <img class="header__logo" src="assets/images/gm2-logo.png" alt="icon">
             <h1 class="header__title">Práctica Javascript</h1>
         </div>
-    </header> -->
+    </header>
     <main class="home">
         <div class="home__container container">
             <section class="practice home__section">
@@ -48,11 +48,11 @@
             </section>
         </div>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="footer__container container">
             <h5 class="footer__text">Ejercicio hecho por Eduar Chilon Cruz</h5>
         </div>
-    </footer> -->
+    </footer>
     <script src="src/main.js" type="module"></script>
 </body>
 </html>
